--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bet Me Daddy Podcast</title>
+    <title>Between Two Termainals</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
 
     <main>
         <section>
-            <h2>Between Two Terminals</h2>
-            <p>A place to air your grievences towards, about, or to include the tech industry. Use your hacker name, made up name, and if you have no cares about getting cancelled, your legal name. </p>
+            <h2>What is making you hate today?</h2>
+            <p>Welcome to Between Two Terminals. A place to air your grievences towards, about, or to include the tech industry. Use your hacker name, made up name, and if you have no cares about getting cancelled, your legal name. Share as much or as little as you want about your topic. </p>
         </section>
 
         <section>
