--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                 <li><a href="https://www.overcast.fm" target="_blank">Overcast</a></li>
             </ul>
         </section>
+        
+         <section>
+            <h3>Send Us Your Recordings!</h3>
+            <p>If you'd like to share your sound recordings with us, please upload them using the link below:</p>
+            <a href="https://www.dropbox.com/request/YOUR_DROPBOX_LINK" target="_blank">Upload Your Recording</a>
+             <p>If you want to write your frustations down and have a random AI voice read it, please upload them using the link below:</p>
+            <a href="https://www.google.com/request/YOUR_DROPBOX_LINK" target="_blank">Upload Your stories</a>
+        </section>
     </main>
 
     <footer>
