--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Between Two Termainals</title>
+     <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+        header, footer {
+            text-align: center;
+            padding: 10px 0;
+        }
+        h1, h2, h3 {
+            color: #FFD700; /* Gold color for headings */
+        }
+        a {
+            color: #1E90FF; /* Dodger Blue for links */
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        section {
+            margin-bottom: 20px;
+        }
+    </style>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
