--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section>
             <h2>What is making you hate today?</h2>
-            <p>Welcome to Between Two Terminals. A place to air your grievences towards, about, or to include the tech industry. Use your hacker name, made up name, and if you have no cares about getting cancelled, your legal name. Share as much or as little as you want about your topic. </p>
+            <p>Welcome to Between Two Terminals. A place to air your grievences or victories towards, about, or in the tech industry. Use your hacker name, made up name, and if you have no worries about getting cancelled, your legal name. Share as much or as little as you want about your topic. These submissions will be read out loud by an AI or by the submitter. </p>
         </section>
 
         <section>
@@ -60,10 +60,8 @@
         
          <section>
             <h3>Send Us Your Recordings!</h3>
-            <p>If you'd like to share your sound recordings with us, please upload them using the link below:</p>
+            <p>Use the link below to share your stories or audio:</p>
             <a href="https://www.dropbox.com/request/YOUR_DROPBOX_LINK" target="_blank">Upload Your Recording</a>
-             <p>If you want to write your frustations down and have a random AI voice read it, please upload them using the link below:</p>
-            <a href="https://www.google.com/request/YOUR_DROPBOX_LINK" target="_blank">Upload Your stories</a>
         </section>
     </main>
 
