--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section>
             <h3>Listen to Us On:</h3>
             <ul>
-                <li><a href="https://www.spotify.com" target="https://podcasters.spotify.com/pod/show/between-two-terminals">Spotify</a></li>
+                <li><a href="https://podcasters.spotify.com/pod/show/between-two-terminals" target="_blank">Spotify</a></li>
                 <li><a href="https://www.apple.com/apple-music/" target="_blank">Apple Podcasts</a></li>
                 <li><a href="https://www.google.com/podcasts" target="_blank">Google Podcasts</a></li>
                 <li><a href="https://www.stitcher.com" target="_blank">Stitcher</a></li>
