--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h3>Listen to Us On:</h3>
             <ul>
                 <li><a href="https://podcasters.spotify.com/pod/show/between-two-terminals" target="_blank">Spotify</a></li>
-                <li><a href="https://www.apple.com/apple-music/" target="_blank">Apple Podcasts</a></li>
+               [//]: # "<li><a href="https://www.apple.com/apple-music/" target="_blank">Apple Podcasts</a></li>"
                 <li><a href="https://www.google.com/podcasts" target="_blank">Google Podcasts</a></li>
                 <li><a href="https://www.stitcher.com" target="_blank">Stitcher</a></li>
                 <li><a href="https://www.overcast.fm" target="_blank">Overcast</a></li>
@@ -60,8 +60,8 @@
         
          <section>
             <h3>Send Us Your Recordings!</h3>
-            <p>Use the link below to share your stories or audio:</p>
-            <a href="https://www.dropbox.com/request/YOUR_DROPBOX_LINK" target="_blank">Upload Your Recording</a>
+            <p>Use the link below to share your stories:</p>
+            <a href="https://forms.gle/R34Pu7iqsmuJyQED7" target="_blank">Upload Your Recording</a>
         </section>
     </main>
 
