--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section>
             <h2>What is making you hate today?</h2>
-            <p>Welcome to Between Two Terminals. A place to air your grievences or victories towards, about, or in the tech industry. Use your hacker name, made up name, and if you have no worries about getting cancelled, your legal name. Share as much or as little as you want about your topic. These submissions will be read out loud by an AI or by the submitter. </p>
+            <p>Between Two Terminals is a project that stems from my own frustrations with the tech industry, where I work. I am considering pivoting this work toward a podcast format, though I haven’t firmly decided yet. This space is intended to be a place for anyone involved in the tech industry to share their frustrations, grievances, and maybe even some victories. The hope is that by opening up, others will realize they’re not alone or the only ones going through these challenges—perhaps even finding a path forward to success. </p>
         </section>
 
         <section>
