--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         </section>
 
         <section>
-            <h3>Listen to Us On:</h3>
+            <h3>Listen On:</h3>
             <ul>
                 <li><a href="https://podcasters.spotify.com/pod/show/between-two-terminals" target="_blank">Spotify</a></li>
             </ul>
         </section>
         
          <section>
-            <h3>Send Us Your Recordings!</h3>
+            <h3>Send me your frustations/victories!</h3>
             <p>Use the link below to share your stories:</p>
             <a href="https://forms.gle/R34Pu7iqsmuJyQED7" target="_blank">Upload Your Recording</a>
         </section>
