--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
          <section>
             <h3>Send me your frustations/victories!</h3>
             <p>Use the link below to share your stories:</p>
-            <a href="https://forms.gle/R34Pu7iqsmuJyQED7" target="_blank">Upload Your Recording</a>
+            <a href="https://forms.gle/R34Pu7iqsmuJyQED7" target="_blank">Upload Your stories</a>
         </section>
     </main>
 
